--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
@@ -281,9 +281,11 @@ body {
 }
 
 .mainNav {
-	border: 1px solid #555;
-	background-color: #e8e8e8;
-	padding: 2px;
+	
+}
+
+.mainNavPanel {
+	width: 100%;
 }
 
 .mainNavHeaders {
