--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -13,7 +13,7 @@
  */
  
 body,table td,select {
-	font-family: "Trebuchet MS", Verdana, Arial, sans-serif;
+	font-family: Verdana, Arial, sans-serif;
 }
 
 pre {
@@ -22,8 +22,8 @@ pre {
 }
 
 body {
-	font-size: 0.75em;
-	line-height: 1.3;
+    font-size: 70%;
+	line-height: 1.2em;
 	color: #222;
 	margin: 0px;
 	border: 0px;
@@ -33,13 +33,13 @@ body {
 }
 
 a,a:visited, .gwt-Anchor {
-	cursor: hand;
+	cursor: pointer;
 	color: #212121;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 a:hover, .gwt-Anchor:hover {
-	cursor: hand;
+	cursor: pointer;
 	text-decoration: none; 
 }
 
@@ -56,6 +56,7 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-Button {
+	outline-style: none;
 	margin: 0;
 	padding: 3px 5px;
 	text-decoration: none !important;
@@ -63,6 +64,8 @@ a:hover, .gwt-Anchor:hover {
 	cursor: hand;
 	background: url("images/ui-bg_glass_75_dadada_1x400.png") repeat-x scroll 50% 50% #DADADA;
 	border: 1px solid #999;
+	
+	font-size: 90%;
 	
 	-moz-border-radius: 4px;
 }
@@ -73,6 +76,7 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-Button:hover {
+	outline-style: none;
 	background: url("images/ui-bg_glass_75_f1b532_1x400.png") repeat-x scroll 50% 50% #DADADA;
 }
 
@@ -238,6 +242,21 @@ a:hover, .gwt-Anchor:hover {
 	border: 1px solid #AAA;
 }
 
+.gwt-DisclosurePanel .header img {
+	background-image: url("images/ui-icons_454545_256x240.png") !important;
+	width: 16px !important;
+	height: 16px !important;
+	margin-top: 4px;
+}
+
+.gwt-DisclosurePanel-open .header img {
+	background-position: -64px -16px !important;
+}
+
+.gwt-DisclosurePanel-closed .header img {
+	background-position: -32px -16px !important;
+}
+
 .gwt-DisclosurePanel .header, .gwt-DisclosurePanel .header:hover, .gwt-DisclosurePanel .header:active {
 	margin: 0;
 	
@@ -248,6 +267,8 @@ a:hover, .gwt-Anchor:hover {
 	
 	border: 0;
 	outline-style: none;
+	
+	line-height: 1em;
 }
 
 .gwt-DisclosurePanel-open .header {
@@ -490,6 +511,10 @@ a:hover, .gwt-Anchor:hover {
 
 .gwt-PasswordTextBox {
 	padding: 2px;
+	border: 1px solid #212121;
+	-moz-border-radius: 2px;
+	
+	font-size: 90%;
 }
 
 .gwt-PasswordTextBox-readonly {
@@ -1104,6 +1129,8 @@ a:hover, .gwt-Anchor:hover {
 
 .gwt-TextArea {
 	padding: 2px;
+	border: 1px solid #212121;
+	-moz-border-radius: 2px;
 }
 
 .gwt-TextArea-readonly {
@@ -1112,6 +1139,10 @@ a:hover, .gwt-Anchor:hover {
 
 .gwt-TextBox {
 	padding: 2px;
+	border: 1px solid #212121;
+	-moz-border-radius: 2px;
+	
+	font-size: 90%;
 }
 
 .gwt-TextBox-readonly {
