--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -273,14 +273,17 @@ a:hover, .gwt-Anchor:hover {
 
 .gwt-DisclosurePanel-open .header {
 	background: url("images/ui-bg_glass_65_d3ae50_1x400.png") repeat-x scroll 50% 50% #D3AE50;
+	color: #212121;
 }
 
 .gwt-DisclosurePanel-closed .header {
 	background: url("images/ui-bg_glass_75_dadada_1x400.png") repeat-x scroll 50% 50% #DADADA;
+	color: #555555;
 }
 
 .gwt-DisclosurePanel-closed .header:hover {
 	background: url("images/ui-bg_glass_75_f1b532_1x400.png") repeat-x scroll 50% 50% #DADADA;
+	color: #212121;
 }
 
 .gwt-DisclosurePanel .content {
@@ -1403,4 +1406,8 @@ td.datePickerMonth {
 	background: white url(images/splitPanelThumb.png) center center
 		no-repeat;
 	cursor: row-resize;
+}
+
+.cellTableOddRow {
+  background: #00ff00;
 }
