CellTable Style auf Anamnesis, Clinic und Doctor übertragen (Doctor & Clinic buggy)

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -56,7 +56,7 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-Button {
-	outline-style: none;
+	outline-style: none !important;
 	margin: 0;
 	padding: 3px 5px;
 	text-decoration: none !important;
