--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -58,8 +58,7 @@ a:hover, .gwt-Anchor:hover {
 .gwt-Button {
 	outline-style: none !important;
 	margin: 0;
-	/* padding: 3px 10px; */
-	padding: 3px 10px 3px 0;
+	padding: 3px 6px 3px 0;
 	text-decoration: none !important;
 	cursor: pointer;
 	cursor: hand;
@@ -1451,15 +1450,15 @@ td.datePickerMonth {
 
 .gwt-Button .ui-icon {
 	float: left;
+	margin-left: 4px;
     margin-right: 4px;
-    margin-top: -2px;
-    width: 16px;
+    margin-top: 1px;
 }
 
 .ui-icon {
 	background-image: url('images/ui-icons_454545.png');
-	height: 16px;
-	width: 16px;
+	height: 11px;
+	width: 11px;
 	background-repeat: no-repeat;
     display: block;
     overflow: hidden;
@@ -1471,524 +1470,524 @@ td.datePickerMonth {
 }
 
 .ui-icon-carat-1-n {
-    background-position: 0 0;
+    background-position: -3px -4px;
 }
 .ui-icon-carat-1-ne {
-    background-position: -16px 0;
+    background-position: -19px -4px;
 }
 .ui-icon-carat-1-e {
-    background-position: -32px 0;
+    background-position: -35px -4px;
 }
 .ui-icon-carat-1-se {
-    background-position: -48px 0;
+    background-position: -51px -4px;
 }
 .ui-icon-carat-1-s {
-    background-position: -64px 0;
+    background-position: -67px -4px;
 }
 .ui-icon-carat-1-sw {
-    background-position: -80px 0;
+    background-position: -83px -4px;
 }
 .ui-icon-carat-1-w {
-    background-position: -96px 0;
+    background-position: -99px -4px;
 }
 .ui-icon-carat-1-nw {
-    background-position: -112px 0;
+    background-position: -115px -4px;
 }
 .ui-icon-carat-2-n-s {
-    background-position: -128px 0;
+    background-position: -131px -4px;
 }
 .ui-icon-carat-2-e-w {
-    background-position: -144px 0;
+    background-position: -147px -4px;
 }
 .ui-icon-triangle-1-n {
-    background-position: 0 -16px;
+    background-position: -3px -20px;
 }
 .ui-icon-triangle-1-ne {
-    background-position: -16px -16px;
+    background-position: -19px -20px;
 }
 .ui-icon-triangle-1-e {
-    background-position: -32px -16px;
+    background-position: -35px -20px;
 }
 .ui-icon-triangle-1-se {
-    background-position: -48px -16px;
+    background-position: -51px -20px;
 }
 .ui-icon-triangle-1-s {
-    background-position: -64px -16px;
+    background-position: -67px -20px;
 }
 .ui-icon-triangle-1-sw {
-    background-position: -80px -16px;
+    background-position: -83px -20px;
 }
 .ui-icon-triangle-1-w {
-    background-position: -96px -16px;
+    background-position: -99px -20px;
 }
 .ui-icon-triangle-1-nw {
-    background-position: -112px -16px;
+    background-position: -115px -20px;
 }
 .ui-icon-triangle-2-n-s {
-    background-position: -128px -16px;
+    background-position: -131px -20px;
 }
 .ui-icon-triangle-2-e-w {
-    background-position: -144px -16px;
+    background-position: -147px -20px;
 }
 .ui-icon-arrow-1-n {
-    background-position: 0 -32px;
+    background-position: -3px -36px;
 }
 .ui-icon-arrow-1-ne {
-    background-position: -16px -32px;
+    background-position: -19px -36px;
 }
 .ui-icon-arrow-1-e {
-    background-position: -32px -32px;
+    background-position: -35px -36px;
 }
 .ui-icon-arrow-1-se {
-    background-position: -48px -32px;
+    background-position: -51px -36px;
 }
 .ui-icon-arrow-1-s {
-    background-position: -64px -32px;
+    background-position: -67px -36px;
 }
 .ui-icon-arrow-1-sw {
-    background-position: -80px -32px;
+    background-position: -83px -36px;
 }
 .ui-icon-arrow-1-w {
-    background-position: -96px -32px;
+    background-position: -99px -36px;
 }
 .ui-icon-arrow-1-nw {
-    background-position: -112px -32px;
+    background-position: -115px -36px;
 }
 .ui-icon-arrow-2-n-s {
-    background-position: -128px -32px;
+    background-position: -131px -36px;
 }
 .ui-icon-arrow-2-ne-sw {
-    background-position: -144px -32px;
+    background-position: -147px -36px;
 }
 .ui-icon-arrow-2-e-w {
-    background-position: -160px -32px;
+    background-position: -163px -36px;
 }
 .ui-icon-arrow-2-se-nw {
-    background-position: -176px -32px;
+    background-position: -179px -36px;
 }
 .ui-icon-arrowstop-1-n {
-    background-position: -192px -32px;
+    background-position: -195px -36px;
 }
 .ui-icon-arrowstop-1-e {
-    background-position: -208px -32px;
+    background-position: -211px -36px;
 }
 .ui-icon-arrowstop-1-s {
-    background-position: -224px -32px;
+    background-position: -227px -36px;
 }
 .ui-icon-arrowstop-1-w {
-    background-position: -240px -32px;
+    background-position: -243px -36px;
 }
 .ui-icon-arrowthick-1-n {
-    background-position: 0 -48px;
+    background-position: -3px -52px;
 }
 .ui-icon-arrowthick-1-ne {
-    background-position: -16px -48px;
+    background-position: -19px -52px;
 }
 .ui-icon-arrowthick-1-e {
-    background-position: -32px -48px;
+    background-position: -35px -52px;
 }
 .ui-icon-arrowthick-1-se {
-    background-position: -48px -48px;
+    background-position: -51px -52px;
 }
 .ui-icon-arrowthick-1-s {
-    background-position: -64px -48px;
+    background-position: -67px -52px;
 }
 .ui-icon-arrowthick-1-sw {
-    background-position: -80px -48px;
+    background-position: -83px -52px;
 }
 .ui-icon-arrowthick-1-w {
-    background-position: -96px -48px;
+    background-position: -99px -52px;
 }
 .ui-icon-arrowthick-1-nw {
-    background-position: -112px -48px;
+    background-position: -115px -52px;
 }
 .ui-icon-arrowthick-2-n-s {
-    background-position: -128px -48px;
+    background-position: -131px -52px;
 }
 .ui-icon-arrowthick-2-ne-sw {
-    background-position: -144px -48px;
+    background-position: -147px -52px;
 }
 .ui-icon-arrowthick-2-e-w {
-    background-position: -160px -48px;
+    background-position: -163px -52px;
 }
 .ui-icon-arrowthick-2-se-nw {
-    background-position: -176px -48px;
+    background-position: -179px -52px;
 }
 .ui-icon-arrowthickstop-1-n {
-    background-position: -192px -48px;
+    background-position: -195px -52px;
 }
 .ui-icon-arrowthickstop-1-e {
-    background-position: -208px -48px;
+    background-position: -211px -52px;
 }
 .ui-icon-arrowthickstop-1-s {
-    background-position: -224px -48px;
+    background-position: -227px -52px;
 }
 .ui-icon-arrowthickstop-1-w {
-    background-position: -240px -48px;
+    background-position: -243px -52px;
 }
 .ui-icon-arrowreturnthick-1-w {
-    background-position: 0 -64px;
+    background-position: -3px -68px;
 }
 .ui-icon-arrowreturnthick-1-n {
-    background-position: -16px -64px;
+    background-position: -19px -68px;
 }
 .ui-icon-arrowreturnthick-1-e {
-    background-position: -32px -64px;
+    background-position: -35px -68px;
 }
 .ui-icon-arrowreturnthick-1-s {
-    background-position: -48px -64px;
+    background-position: -51px -68px;
 }
 .ui-icon-arrowreturn-1-w {
-    background-position: -64px -64px;
+    background-position: -67px -68px;
 }
 .ui-icon-arrowreturn-1-n {
-    background-position: -80px -64px;
+    background-position: -83px -68px;
 }
 .ui-icon-arrowreturn-1-e {
-    background-position: -96px -64px;
+    background-position: -99px -68px;
 }
 .ui-icon-arrowreturn-1-s {
-    background-position: -112px -64px;
+    background-position: -115px -68px;
 }
 .ui-icon-arrowrefresh-1-w {
-    background-position: -128px -64px;
+    background-position: -131px -68px;
 }
 .ui-icon-arrowrefresh-1-n {
-    background-position: -144px -64px;
+    background-position: -147px -68px;
 }
 .ui-icon-arrowrefresh-1-e {
-    background-position: -160px -64px;
+    background-position: -163px -68px;
 }
 .ui-icon-arrowrefresh-1-s {
-    background-position: -176px -64px;
+    background-position: -179px -68px;
 }
 .ui-icon-arrow-4 {
-    background-position: 0 -80px;
+    background-position: -3px -84px;
 }
 .ui-icon-arrow-4-diag {
-    background-position: -16px -80px;
+    background-position: -19px -84px;
 }
 .ui-icon-extlink {
-    background-position: -32px -80px;
+    background-position: -35px -84px;
 }
 .ui-icon-newwin {
-    background-position: -48px -80px;
+    background-position: -51px -84px;
 }
 .ui-icon-refresh {
-    background-position: -64px -80px;
+    background-position: -67px -84px;
 }
 .ui-icon-shuffle {
-    background-position: -80px -80px;
+    background-position: -83px -84px;
 }
 .ui-icon-transfer-e-w {
-    background-position: -96px -80px;
+    background-position: -99px -84px;
 }
 .ui-icon-transferthick-e-w {
-    background-position: -112px -80px;
+    background-position: -115px -84px;
 }
 .ui-icon-folder-collapsed {
-    background-position: 0 -96px;
+    background-position: -3px -100px;
 }
 .ui-icon-folder-open {
-    background-position: -16px -96px;
+    background-position: -19px -100px;
 }
 .ui-icon-document {
-    background-position: -32px -96px;
+    background-position: -35px -100px;
 }
 .ui-icon-document-b {
-    background-position: -48px -96px;
+    background-position: -51px -100px;
 }
 .ui-icon-note {
-    background-position: -64px -96px;
+    background-position: -67px -100px;
 }
 .ui-icon-mail-closed {
-    background-position: -80px -96px;
+    background-position: -83px -100px;
 }
 .ui-icon-mail-open {
-    background-position: -96px -96px;
+    background-position: -99px -100px;
 }
 .ui-icon-suitcase {
-    background-position: -112px -96px;
+    background-position: -115px -100px;
 }
 .ui-icon-comment {
-    background-position: -128px -96px;
+    background-position: -131px -100px;
 }
 .ui-icon-person {
-    background-position: -144px -96px;
+    background-position: -147px -100px;
 }
 .ui-icon-print {
-    background-position: -160px -96px;
+    background-position: -163px -100px;
 }
 .ui-icon-trash {
-    background-position: -176px -96px;
+    background-position: -179px -100px;
 }
 .ui-icon-locked {
-    background-position: -192px -96px;
+    background-position: -195px -100px;
 }
 .ui-icon-unlocked {
-    background-position: -208px -96px;
+    background-position: -211px -100px;
 }
 .ui-icon-bookmark {
-    background-position: -224px -96px;
+    background-position: -227px -100px;
 }
 .ui-icon-tag {
-    background-position: -240px -96px;
+    background-position: -243px -100px;
 }
 .ui-icon-home {
-    background-position: 0 -112px;
+    background-position: -3px -116px;
 }
 .ui-icon-flag {
-    background-position: -16px -112px;
+    background-position: -19px -116px;
 }
 .ui-icon-calendar {
-    background-position: -32px -112px;
+    background-position: -35px -116px;
 }
 .ui-icon-cart {
-    background-position: -48px -112px;
+    background-position: -51px -116px;
 }
 .ui-icon-pencil {
-    background-position: -64px -112px;
+    background-position: -67px -116px;
 }
 .ui-icon-clock {
-    background-position: -80px -112px;
+    background-position: -83px -116px;
 }
 .ui-icon-disk {
-    background-position: -96px -112px;
+    background-position: -99px -116px;
 }
 .ui-icon-calculator {
-    background-position: -112px -112px;
+    background-position: -115px -116px;
 }
 .ui-icon-zoomin {
-    background-position: -128px -112px;
+    background-position: -131px -116px;
 }
 .ui-icon-zoomout {
-    background-position: -144px -112px;
+    background-position: -147px -116px;
 }
 .ui-icon-search {
-    background-position: -160px -112px;
+    background-position: -163px -116px;
 }
 .ui-icon-wrench {
-    background-position: -176px -112px;
+    background-position: -179px -116px;
 }
 .ui-icon-gear {
-    background-position: -192px -112px;
+    background-position: -195px -116px;
 }
 .ui-icon-heart {
-    background-position: -208px -112px;
+    background-position: -211px -116px;
 }
 .ui-icon-star {
-    background-position: -224px -112px;
+    background-position: -227px -116px;
 }
 .ui-icon-link {
-    background-position: -240px -112px;
+    background-position: -243px -116px;
 }
 .ui-icon-cancel {
-    background-position: 0 -128px;
+    background-position: -3px -132px;
 }
 .ui-icon-plus {
-    background-position: -16px -128px;
+    background-position: -19px -132px;
 }
 .ui-icon-plusthick {
-    background-position: -32px -128px;
+    background-position: -35px -132px;
 }
 .ui-icon-minus {
-    background-position: -48px -128px;
+    background-position: -51px -132px;
 }
 .ui-icon-minusthick {
-    background-position: -64px -128px;
+    background-position: -67px -132px;
 }
 .ui-icon-close {
-    background-position: -80px -128px;
+    background-position: -83px -132px;
 }
 .ui-icon-closethick {
-    background-position: -96px -128px;
+    background-position: -99px -132px;
 }
 .ui-icon-key {
-    background-position: -112px -128px;
+    background-position: -115px -132px;
 }
 .ui-icon-lightbulb {
-    background-position: -128px -128px;
+    background-position: -131px -132px;
 }
 .ui-icon-scissors {
-    background-position: -144px -128px;
+    background-position: -147px -132px;
 }
 .ui-icon-clipboard {
-    background-position: -160px -128px;
+    background-position: -163px -132px;
 }
 .ui-icon-copy {
-    background-position: -176px -128px;
+    background-position: -179px -132px;
 }
 .ui-icon-contact {
-    background-position: -192px -128px;
+    background-position: -195px -132px;
 }
 .ui-icon-image {
-    background-position: -208px -128px;
+    background-position: -211px -132px;
 }
 .ui-icon-video {
-    background-position: -224px -128px;
+    background-position: -227px -132px;
 }
 .ui-icon-script {
-    background-position: -240px -128px;
+    background-position: -243px -132px;
 }
 .ui-icon-alert {
-    background-position: 0 -144px;
+    background-position: -3px -148px;
 }
 .ui-icon-info {
-    background-position: -16px -144px;
+    background-position: -19px -148px;
 }
 .ui-icon-notice {
-    background-position: -32px -144px;
+    background-position: -35px -148px;
 }
 .ui-icon-help {
-    background-position: -48px -144px;
+    background-position: -51px -148px;
 }
 .ui-icon-check {
-    background-position: -64px -144px;
+    background-position: -67px -148px;
 }
 .ui-icon-bullet {
-    background-position: -80px -144px;
+    background-position: -83px -148px;
 }
 .ui-icon-radio-off {
-    background-position: -96px -144px;
+    background-position: -99px -148px;
 }
 .ui-icon-radio-on {
-    background-position: -112px -144px;
+    background-position: -115px -148px;
 }
 .ui-icon-pin-w {
-    background-position: -128px -144px;
+    background-position: -131px -148px;
 }
 .ui-icon-pin-s {
-    background-position: -144px -144px;
+    background-position: -147px -148px;
 }
 .ui-icon-play {
-    background-position: 0 -160px;
+    background-position: -3px -164px;
 }
 .ui-icon-pause {
-    background-position: -16px -160px;
+    background-position: -19px -164px;
 }
 .ui-icon-seek-next {
-    background-position: -32px -160px;
+    background-position: -35px -164px;
 }
 .ui-icon-seek-prev {
-    background-position: -48px -160px;
+    background-position: -51px -164px;
 }
 .ui-icon-seek-end {
-    background-position: -64px -160px;
+    background-position: -67px -164px;
 }
 .ui-icon-seek-start {
-    background-position: -80px -160px;
+    background-position: -83px -164px;
 }
 .ui-icon-seek-first {
-    background-position: -80px -160px;
+    background-position: -83px -164px;
 }
 .ui-icon-stop {
-    background-position: -96px -160px;
+    background-position: -99px -164px;
 }
 .ui-icon-eject {
-    background-position: -112px -160px;
+    background-position: -115px -164px;
 }
 .ui-icon-volume-off {
-    background-position: -128px -160px;
+    background-position: -131px -164px;
 }
 .ui-icon-volume-on {
-    background-position: -144px -160px;
+    background-position: -147px -164px;
 }
 .ui-icon-power {
-    background-position: 0 -176px;
+    background-position: -3px -180px;
 }
 .ui-icon-signal-diag {
-    background-position: -16px -176px;
+    background-position: -19px -180px;
 }
 .ui-icon-signal {
-    background-position: -32px -176px;
+    background-position: -35px -180px;
 }
 .ui-icon-battery-0 {
-    background-position: -48px -176px;
+    background-position: -51px -180px;
 }
 .ui-icon-battery-1 {
-    background-position: -64px -176px;
+    background-position: -67px -180px;
 }
 .ui-icon-battery-2 {
-    background-position: -80px -176px;
+    background-position: -83px -180px;
 }
 .ui-icon-battery-3 {
-    background-position: -96px -176px;
+    background-position: -99px -180px;
 }
 .ui-icon-circle-plus {
-    background-position: 0 -192px;
+    background-position: -3px -196px;
 }
 .ui-icon-circle-minus {
-    background-position: -16px -192px;
+    background-position: -19px -196px;
 }
 .ui-icon-circle-close {
-    background-position: -32px -192px;
+    background-position: -35px -196px;
 }
 .ui-icon-circle-triangle-e {
-    background-position: -48px -192px;
+    background-position: -51px -196px;
 }
 .ui-icon-circle-triangle-s {
-    background-position: -64px -192px;
+    background-position: -67px -196px;
 }
 .ui-icon-circle-triangle-w {
-    background-position: -80px -192px;
+    background-position: -83px -196px;
 }
 .ui-icon-circle-triangle-n {
-    background-position: -96px -192px;
+    background-position: -99px -196px;
 }
 .ui-icon-circle-arrow-e {
-    background-position: -112px -192px;
+    background-position: -115px -196px;
 }
 .ui-icon-circle-arrow-s {
-    background-position: -128px -192px;
+    background-position: -131px -196px;
 }
 .ui-icon-circle-arrow-w {
-    background-position: -144px -192px;
+    background-position: -147px -196px;
 }
 .ui-icon-circle-arrow-n {
-    background-position: -160px -192px;
+    background-position: -163px -196px;
 }
 .ui-icon-circle-zoomin {
-    background-position: -176px -192px;
+    background-position: -179px -196px;
 }
 .ui-icon-circle-zoomout {
-    background-position: -192px -192px;
+    background-position: -195px -196px;
 }
 .ui-icon-circle-check {
-    background-position: -208px -192px;
+    background-position: -211px -196px;
 }
 .ui-icon-circlesmall-plus {
-    background-position: 0 -208px;
+    background-position: -3px -212px;
 }
 .ui-icon-circlesmall-minus {
-    background-position: -16px -208px;
+    background-position: -19px -212px;
 }
 .ui-icon-circlesmall-close {
-    background-position: -32px -208px;
+    background-position: -35px -212px;
 }
 .ui-icon-squaresmall-plus {
-    background-position: -48px -208px;
+    background-position: -51px -212px;
 }
 .ui-icon-squaresmall-minus {
-    background-position: -64px -208px;
+    background-position: -67px -212px;
 }
 .ui-icon-squaresmall-close {
-    background-position: -80px -208px;
+    background-position: -83px -212px;
 }
 .ui-icon-grip-dotted-vertical {
-    background-position: 0 -224px;
+    background-position: -3px -228px;
 }
 .ui-icon-grip-dotted-horizontal {
-    background-position: -16px -224px;
+    background-position: -19px -228px;
 }
 .ui-icon-grip-solid-vertical {
-    background-position: -32px -224px;
+    background-position: -35px -228px;
 }
 .ui-icon-grip-solid-horizontal {
-    background-position: -48px -224px;
+    background-position: -51px -228px;
 }
 .ui-icon-gripsmall-diagonal-se {
-    background-position: -64px -224px;
+    background-position: -67px -228px;
 }
 .ui-icon-grip-diagonal-se {
-    background-position: -80px -224px;
+    background-position: -83px -228px;
 }
