--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -1007,7 +1007,14 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-TabBar {
-	
+    background: url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") repeat-x scroll 50% 50% #CCCCCC;
+    border: 1px solid #AAAAAA;
+    border-bottom: 0;
+    color: #222222;
+    font-weight: bold;
+    padding: 8px 10px 0;
+    -moz-border-radius-topleft: 16px;
+    -moz-border-radius-topright: 16px;
 }
 
 .gwt-TabBar .gwt-TabBarFirst {
@@ -1019,19 +1026,34 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-TabBar .gwt-TabBarItem {
-	margin-left: 6px;
-	padding: 3px 6px 3px 6px;
-	cursor: pointer;
-	cursor: hand;
-	color: black;
-	font-weight: bold;
-	text-align: center;
-	background: #e3e3e3;
+    background: url("images/ui-bg_glass_75_dadada_1x400.png") repeat-x scroll 50% 50% #DADADA;
+    -moz-border-radius-topleft: 12px;
+    -moz-border-radius-topright: 12px;
+    border-color: #AAAAAA #AAAAAA -moz-use-text-color;
+    border-style: solid solid none;
+    border-width: 1px 1px 0;
+    color: #454545;
+    cursor: pointer;
+    font-size: 1.05em;
+    font-weight: bold;
+    line-height: 1em;
+    margin: 0 2px;
+    outline-style: none;
+    text-decoration: none;
+    padding: 7px 20px;
+    
+    position: relative;
+    margin: 0 -6px;
 }
 
 .gwt-TabBar .gwt-TabBarItem-selected {
-	cursor: default;
-	background: #bcbcbc;
+    background: url("images/ui-bg_glass_65_d3ae50_1x400.png") repeat-x scroll 50% 50% #D3AE50;
+    color: #555555;
+}
+
+.gwt-TabBar .gwt-TabBarItem:hover {
+    background: url("images/ui-bg_glass_75_f1b532_1x400.png") repeat-x scroll 50% 50% #DADADA;
+    color: #454545;
 }
 
 .gwt-TabBar .gwt-TabBarItem-disabled {
@@ -1044,11 +1066,15 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-TabPanelBottom {
-	border-color: #bcbcbc;
+	border-color: #aaaaaa;
 	border-style: solid;
-	border-width: 3px 2px 2px;
+	border-width: 0 1px 1px 1px;
+	-moz-border-radius-bottomleft: 16px;
+	-moz-border-radius-bottomright: 16px;
+	
 	overflow: hidden;
 	padding: 6px;
+	background: url("images/ui-bg_highlight-soft_0_e0e0e0_1x400.png") repeat-x scroll 50% 50% #ffffff;
 }
 
 .gwt-DecoratedTabBar {
