AnamnesisCheck: View, DetailsView und EditView gestaltet. Letztere beiden soweit fertig. Icons für Anamnesis.Table hinzugefügt

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
@@ -387,6 +387,10 @@ body {
 	white-space: nowrap;
 }
 
+.AnamnesisMCValueSubPanel table {
+	margin: 2px 0;
+}
+
 /* #loading {
 	position: absolute;
 	margin: 100px auto;
