- Gestaltung Basisfilter Popup - Gestaltung Sprachen Popup

--- a/OsceManager/.settings/org.eclipse.wst.common.component
+++ b/OsceManager/.settings/org.eclipse.wst.common.component
@@ -10,5 +10,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/aspect"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
   </wb-module>
 </project-modules>
