- Gestaltung AnamnesisSubView - Implementation GenericAnswerCell - Beginn Implementation Eventfunktionalitäten auf GenericAnswerCell (CellTable wird nun korrekt mit Formularelementen gefüllt)

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/resources/MyCellTable.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/resources/MyCellTable.css
@@ -122,19 +122,19 @@
 }
 
 .cellTableEvenYesRow {
-	background: #F2FFD6;
+  background: #ffffff;
 }
 
 .cellTableOddYesRow {
-	background: #E6F7C1;
+  background: #eee;
 }
 
 .cellTableEvenNoRow {
-	background: #FFE1DB;
+	background: #FFF2D1;
 }
 
 .cellTableOddNoRow {
-	background: #FCD4CC;
+	background: #F5DFA6;
 }
 
 .cellTableKeyboardSelectedRow {
