Implementation StandardizedPatientAnamnesisSubView / Arbeit an Speicherfunkionalität

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -734,6 +734,11 @@ a:hover, .gwt-Anchor:hover {
 	
 }
 
+.gwt-RadioButton label {
+	bottom: 3px;
+	position: relative;
+}
+
 .gwt-RadioButton-disabled {
 	color: #888;
 }
